2009-03-26  Jonathan Pryor  <jpryor@novell.com>

	* Test/: Added (though empty), to allow building unit tests located in
	  src/*/Test/**.
	* System.Data.Linq_test.dll.sources: Added; database-less unit tests.

2009-03-26  Jonathan Pryor  <jpryor@novell.com>

	* src/DbLinq/System.Data.Linq/Binary.cs: Update to pass the unit tests.
	* Makefile: Build against System.Runtime.Serialization.dll so that
	  Binary can use the [DataContract] attribute.

2009-03-26  Jonathan Pryor  <jpryor@novell.com>

	* **/*: Flush.  (Updates to sync with DbLinq r1026, correcting tests
	  so that they build under Mono for testing System.Data.Linq.dll.)

2009-03-26  Jonathan Pryor  <jpryor@novell.com>

	* **/*: Flush.  (Updates to sync with DbLinq r1020, adding additional 
	  tests generated from gui-compare differences.)

2009-03-19  Jonathan Pryor  <jpryor@novell.com>

	* src/DbLinq/Data/Linq/Database/Implementation/TransactionalCommand.cs,
	  src/DbLinq.Firebird/FirebirdDataContext.cs,
	  src/DbLinq.Ingres/IngresDataContext.cs,
	  src/DbLinq.MySql/MysqlDataContext.cs,
	  src/DbLinq.Oracle/OracleDataContext.cs,
	  src/DbLinq.PostgreSql/PgsqlDataContext.cs,
	  src/DbLinq.Sqlite/Schema/DataCommand.cs,
	  src/DbLinq.Sqlite/SqliteDataContext.cs,
	  src/DbLinq.SqlServer/SqlServerDataContext.cs,
	  src/DbLinq/Util/ReflectionUtility.cs: Make types internal so that
	  they aren't exported from System.Data.Linq.dll.

2009-03-12  Jonathan Pryor  <jpryor@novell.com>

	* Makefile: Also distribute .txt files.

2009-03-12  Jonathan Pryor  <jpryor@novell.com>

	* src/DbMetal/Generator/Implementation/CodeTextGenerator/CodeGenerator.cs:
	  There is no System.Vendor namespace, so don't generate one.

2009-03-12  Jonathan Pryor  <jpryor@novell.com>

	* Makefile: Add a dist-local target and distribute all DbLinq sources.
	  We can't just rely on the normal System.Data.Linq.dll.sources
	  handling because ../../tools/sqlmetal also uses these sources.

2009-03-12  Jonathan Pryor  <jpryor@novell.com>
